Prevent horizontal scroll on mobile devices
The overflow-x was present on mobile devices. It may have to do with the body tag being relative displayed. Hide overflow-x on main wrapper element fixes this.

Also set initial scale to 1.0 for the viewport.

LP#15202477

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -46,6 +46,7 @@ body {
 .main-wrapper {
   background: $white;
   color: $black;
+  overflow-x: hidden; // Enable bleeds without horizontal scroll
 }
 
 .header {
